Add swapi endpoit
