# src/server/routes/swapi.js
@@ -1,17 +1,18 @@
 const express = require('express');
 const router = express.Router()
-const { logger } = require('../utils/logging')(module);
-const { returnErrorResponse, returnResponse } = require('../utils/status');
+const {logger} = require('../utils/logging')(module);
+const {returnErrorResponse, returnResponse} = require('../utils/status');
 const {StatusCodes, ReasonPhrases} = require('http-status-codes');
 const authenticate = require('../middlewares/authorization');
+const {getSwapiPeople} = require('../services/swapi_people_service');
 
-router.get('/', authenticate, async (req, res) => {
-    logger.info(`SWAPI Endpoint: GET /swapi`);
+router.get('/people', authenticate, async (req, res) => {
     try {
-
-        returnResponse(res, [], StatusCodes.OK, ReasonPhrases.OK)
+        logger.info(`Chuck Endpoint: GET /swapi/people`);
+        const swapiPeople = await getSwapiPeople();
+        returnResponse(res, {data: swapiPeople}, StatusCodes.OK, ReasonPhrases.OK)
     } catch (error) {
-        logger.error(`Error in GET /swapi: ${error.toString()}`);
+        logger.error(`Error in GET /swapi/people: ${error.toString()}`);
         returnErrorResponse(res, error, StatusCodes.INTERNAL_SERVER_ERROR);
     }
 });
